Fixed text wrapping and overflowing messages

--- a/SE - AI Skills Tool/ClientApp/src/app/chatbot/chatbot.component.css
+++ b/SE - AI Skills Tool/ClientApp/src/app/chatbot/chatbot.component.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   /*justify-content: flex-end;*/
-  height: 90%;
+  height: 92%;
   overflow-y: auto;
   scrollbar-gutter: stable;
 }
@@ -38,10 +38,18 @@
 }
 .chatbot .message {
   background-color: #1d3263;
-  padding: 0.75rem 1rem 0 1rem;
+  padding: 1rem 1rem 0 1rem;
   margin-bottom: 1.5rem;
   max-width: 100%;
   line-height: 125%;
+
+  text-align: justify;
+  word-wrap: anywhere;
+  overflow-wrap: anywhere;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 .chatbot .user {
@@ -75,7 +83,7 @@
 .chatbot .form {
   display: flex;
   flex-direction: row;
-  height: 10%;
+  height: 8%;
   width: 100%;
   justify-content: space-between;
   /*padding: 1rem;*/
@@ -117,5 +125,5 @@
 }
 
 .chatbot p {
-  color: #ffffff;
+  color: rgb(248,249,250);
 }
